tests/errors/duplicate_function_params.py
# expect_error: Duplicate parameter name
def bad(a, a):
    return a